--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="main-container">
 
     <div class="top-section">
-      <img id="red-hair" src="../hair-pics/hair-shortRed.png" alt="">
+      <img id="red-hair" src="./hair-pics/hair-shortRed.png" alt="">
       <h1 id="top-text">Wow look at this style!</h1>
     </div>
     <div id="far-left" class="square">
