added images to homepage

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
       <h1 id="top-text">Wow look at this style!</h1>
     </div>
     <div id="far-left" class="square">
-      <img src="./100x100_circle.png" alt="">
+      <img class="hair-pic" src="./hair-pics/hair-c.png" alt="">
       <h>Amazing Title Here!</h>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime eius quam quibusdam incidunt voluptatibus aliquid debitis omnis deleniti! Quas soluta sunt unde corrupti temporibus eveniet dignissimos quo earum odit. Quidem?</p>
     </div>
     <div id="middle-left" class="square">
-      <img src="./100x100_circle.png" alt="">
+      <img class="hair-pic" src="./hair-pics/hair-h.png" alt="">
       <h>Amazing Title Here!</h>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime eius quam quibusdam incidunt voluptatibus aliquid debitis omnis deleniti! Quas soluta sunt unde corrupti temporibus eveniet dignissimos quo earum odit. Quidem?</p>
     </div>
     <div id="middle-right" class="square">
-      <img src="./100x100_circle.png" alt="">
+      <img class="hair-pic" src="./hair-pics/hair-k.png" alt="">
       <h>Amazing Title Here!</h>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime eius quam quibusdam incidunt voluptatibus aliquid debitis omnis deleniti! Quas soluta sunt unde corrupti temporibus eveniet dignissimos quo earum odit. Quidem?</p>
     </div>
     <div id="far-right" class="square">
-      <img src="./100x100_circle.png" alt="">
+      <img class="hair-pic" src="./hair-pics/hair-g.png" alt="">
       <h>Amazing Title Here!</h>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime eius quam quibusdam incidunt voluptatibus aliquid debitis omnis deleniti! Quas soluta sunt unde corrupti temporibus eveniet dignissimos quo earum odit. Quidem?</p>
     </div>
@@ -52,7 +52,7 @@
     <div id="bottom-left" class="square">
       <div class="absolute-box">Palooza</div>
       <div id="inner-bottom">
-        <img src="./100x100_circle.png" alt="">
+        <img class="hair-pic" src="./hair-pics/hair-k.png" alt="">
         <h1 class="big-text">Something interesting?</h1>
       </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quis nam sapiente ea eaque labore aspernatur quam, explicabo fugit dolorem ab! Beatae amet debitis error ipsa distinctio pariatur magni a!</p>
